--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang=en>
   <head>
     <title>Thomas's website</title>
-    <link rel="stylesheet" type="text/css" href="mystyle.css"> <!--CSS style sheet-->
+    <link rel="stylesheet" type="text/css" href="https://hello12111211.github.io/NoAi/style.css"> <!--CSS style sheet-->
 
   </head>
   <body>
