--- a/main.html
+++ b/main.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <title>Thomas's website</title>
+     <link rel="stylesheet" type="text/css" href="https://hello12111211.github.io/NoAi/style.css"> <!--CSS style sheet-->
   </head>
 <body>
   <h1 id="headingM">Welcome to the main webpage</h1>
