--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
       <div id="main">
       <button>
-      <a href="" target="_self">Main web page</a>
+      <a href="https://hello12111211.github.io/NoAi/main" target="_self">Main web page</a>
       </button>
       </div>
       
