--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       <div id="main">
       <button>
       <a href="https://hello12111211.github.io/NoAi/main" target="_self">Main web page</a>
+        <br>
+      <a href="https://hello12111211.github.io/NoAi/style.css target="_self">My css file</a>
       </button>
       </div>
       
