--- a/main.html
+++ b/main.html
@@ -8,10 +8,10 @@
   <h1 id="headingM">Welcome to the main webpage</h1>
   <p id="heading2M">I will be doing most of my work on this page</p>
   <br>
-  <div id="main">
-  <button>
+
+  <button id="main">
     <a href="https://hello12111211.github.io/NoAi" target="_self">Home</a>
   </button>
-  </div>
+
 </body>
 </html>
