--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <h1 id="heading">Welcome to my website</h1>
     <p id="heading2">there will be no ai on this repository unlike most of my others
 
-      <div id="main">
-      <button>
+
+      <button id="main">
       <a href="https://hello12111211.github.io/NoAi/main" target="_self">Main web page</a>
         <br>
       <a href="https://hello12111211.github.io/NoAi/style.css target="_self">My css file</a>
       </button>
-      </div>
+
       
 
     
