--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <button id="main">
       <a href="https://hello12111211.github.io/NoAi/main" target="_self">Main web page</a>
         <br>
-      <a href="https://hello12111211.github.io/NoAi/style.css target="_self">My css file</a>
+      <a href="https://hello12111211.github.io/NoAi/style.css" target="_self">My css file</a>
       </button>
 
       
