--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
   <p id="heading2M">I will be doing most of my work on this page</p>
   <br>
 
-  <button id="main">
+  <button id="button">
     <a href="https://hello12111211.github.io/NoAi" target="_self">Home</a>
   </button>
 
