--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p id="heading2">there will be no ai on this repository unlike most of my others
 
 
-      <button id="main">
+      <button id="button">
       <a href="https://hello12111211.github.io/NoAi/main" target="_self">Main web page</a>
         <br>
       <a href="https://hello12111211.github.io/NoAi/style.css" target="_self">My css file</a>
