--- a/idk.html
+++ b/idk.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<title>Thomas's website</title>
+<link rel="stylesheet" type="text/css" href="https://hello12111211.github.io/NoAi/style2.css"> <!--CSS style sheet-->
+</head>
+<body>
 
+<h1 id="heading">This is a blue heading.</h1>
+<p id="p">this is a red paragaraph.</p>
+
+
+
+
+
+</body>
+</html>
