--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
         <br>
       <a href="https://hello12111211.github.io/NoAi/style.css" target="_self">My css file</a>
       </button>
+      <br>
+      <br>
+      <button id="button" class="button">
+        <a href="https://hello12111211.github.io/NoAi/idk.html">tester page</a>
+      </button>
 
       
 
