--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         <br>
         <br>
       <a href="https://hello12111211.github.io/NoAi/style.css" target="_self">My css file</a>
+      <br>
+      <br>
+      <a href="https://hello12111211.github.io/NoAi/style2.css">css file for tester page</a>
       </button>
       <br>
       <br>
